Remove deprecated URL constructors